@@ -88,6 +88,7 @@ sub _menu {
       div;
        a href => "$uid/edit", mt '_menu_myprofile'; br;
        a href => "$uid/list", mt '_menu_myvnlist'; br;
+       a href => "$uid/votes",mt '_menu_myvotes'; br;
        a href => "$uid/wish", mt '_menu_mywishlist'; br;
        a href => "$uid/notifies", $nc ? (class => 'notifyget') : (), mt('_menu_mynotifications').($nc?" ($nc)":''); br;
        a href => "$uid/hist", mt '_menu_mychanges'; br;
